--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>location.href = 'https://sorrycc.com' + location.path;</script>
+    <script>location.href = 'https://sorrycc.com' + (location.path || '');</script>
 </body>
 </html>
